--- a/app/src/main/res/layout/row_transaction_layout.xml
+++ b/app/src/main/res/layout/row_transaction_layout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="145dp">
+    android:layout_height="wrap_content">
     <LinearLayout
-        android:layout_width="110dp"
+        android:layout_width="180dp"
         android:layout_height="137dp"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
@@ -12,17 +12,17 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
 
             android:text="random num"
             android:id="@+id/tvTransId"
-            android:textSize="12sp"
+            android:textSize="15sp"
             android:gravity="left"
             android:textColor="#fff"/>
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
 
             android:text="$350"
@@ -34,22 +34,22 @@
             android:textColor="#fff"/>
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
 
             android:text="Date"
-            android:textSize="12sp"
+            android:textSize="15sp"
             android:gravity="left"
 
             android:id="@+id/tvTime"
             android:textColor="#fff"/>
 
         <TextView
-            android:layout_width="100dp"
+            android:layout_width="130dp"
             android:layout_height="wrap_content"
 
             android:text="Date"
-            android:textSize="12sp"
+            android:textSize="15sp"
             android:gravity="left"
             android:id="@+id/tvDate"
             android:textColor="#fff"/>
@@ -82,7 +82,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:weightSum="1"
-        android:layout_marginLeft="10dp"
+        android:layout_marginLeft="0dp"
         android:layout_gravity="center_vertical"
         android:gravity="center_vertical"
         android:orientation="vertical">
@@ -94,7 +94,7 @@
             android:padding="5dp"
             android:id="@+id/tvStartingPoint"
             android:text="Johar Town"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="80dp"
             android:layout_marginRight="10dp"
             android:layout_marginTop="7dp"
             android:textColor="#fff"
@@ -111,7 +111,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="3dp"
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="80dp"
             android:layout_marginRight="10dp"
             android:id="@+id/tvDestinationPoint"
             android:text="cheeechaaa watniii"
@@ -120,7 +120,7 @@
             android:textStyle="bold" />
 
         <LinearLayout
-            android:layout_marginLeft="10dp"
+            android:layout_marginLeft="80dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
         <LinearLayout
@@ -151,7 +151,7 @@
 
         </LinearLayout>
             <View
-                android:layout_width="10dp"
+                android:layout_width="20dp"
                 android:layout_height="wrap_content"/>
 
         <LinearLayout
