--- a/app/src/main/res/layout/dialog_terminal_manager_pin_code.xml
+++ b/app/src/main/res/layout/dialog_terminal_manager_pin_code.xml
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="numberPassword"
+        android:inputType="textPassword"
         android:layout_margin="10dp"
         android:hint="Pin Code"/>
     <Button
