--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -11,12 +11,14 @@
         layout="@layout/app_bar">
     </include>
     <LinearLayout
-        android:layout_below="@id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:orientation="vertical"
-        android:layout_marginTop="30dp">
+        android:layout_marginTop="30dp"
+        android:layout_below="@+id/app_bar"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
     <TextView
         android:id="@+id/tvdriverName"
         android:layout_width="match_parent"
@@ -51,14 +53,14 @@
             android:layout_marginTop="20dp"/>
         <Button
             android:padding="15dp"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_width="200dp"
+            android:layout_height="70dp"
             android:id="@+id/btnLogin"
+            android:layout_gravity="center"
             android:layout_alignParentBottom="true"
             android:text="Login"
-            android:textColor="#fff"
-            android:background="@drawable/bg_btn_route_detailed"
-            android:layout_marginTop="180dp"/>
+            android:background="@color/colorPrimaryDark"
+            android:textColor="#fff" android:layout_marginTop="180dp"/>
 
     </LinearLayout>
 
