--- a/app/src/main/res/layout/activity_setup_screen_extended.xml
+++ b/app/src/main/res/layout/activity_setup_screen_extended.xml
@@ -58,7 +58,7 @@
         android:layout_marginLeft="20dp"
         android:textColor="#fff"
         android:layout_height="wrap_content"
-        android:text="Vehicle Reg No" />
+        android:text="Select Route" />
 
     <Spinner
         android:id="@+id/vehicleRegSpinner"
